--- a/gamecorev0.0.7/gamecorev0.0.7/gamecorev0.0.7.vcproj
+++ b/gamecorev0.0.7/gamecorev0.0.7/gamecorev0.0.7.vcproj
@@ -61,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="irrBullet.lib BulletDynamics.lib BulletSoftBody.lib GIMPACTUtils.lib LinearMath.lib BulletCollision.lib raknetdll.lib ws2_32.lib wsock32.lib Irrlicht.lib irrKlang.lib opengl32.lib"
+				AdditionalDependencies="irrBullet.lib BulletDynamics.lib BulletSoftBody.lib GIMPACTUtils.lib LinearMath.lib BulletCollision.lib raknetdll.lib ws2_32.lib wsock32.lib Irrlicht.lib irrKlang.lib opengl32.lib lua51.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -272,20 +272,6 @@
 			</File>
 		</Filter>
 		<Filter
-			Name="Resource Files"
-			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
-			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
-			>
-			<File
-				RelativePath=".\Splash.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Splash.h"
-				>
-			</File>
-		</Filter>
-		<Filter
 			Name="console_sorce"
 			>
 			<File
@@ -314,6 +300,18 @@
 			</File>
 			<File
 				RelativePath=".\utils.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Lua"
+			>
+			<File
+				RelativePath=".\NPC.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\NPC.h"
 				>
 			</File>
 		</Filter>
