--- a/gamecorev0.0.8/gamecorev0.0.8/gamecorev0.0.8.vcproj
+++ b/gamecorev0.0.8/gamecorev0.0.8/gamecorev0.0.8.vcproj
@@ -267,6 +267,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\resource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\resource1.h"
+				>
+			</File>
+			<File
 				RelativePath=".\SAppcontext.h"
 				>
 			</File>
