--- a/gamecorev0.0.8/gamecorev0.0.8/gamecorev0.0.8.vcproj
+++ b/gamecorev0.0.8/gamecorev0.0.8/gamecorev0.0.8.vcproj
@@ -197,6 +197,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\mapLoader.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\NetworkData.cpp"
 				>
 			</File>
@@ -244,6 +248,10 @@
 			</File>
 			<File
 				RelativePath=".\kinematiccharactercontroller.h"
+				>
+			</File>
+			<File
+				RelativePath=".\mapLoader.h"
 				>
 			</File>
 			<File
