--- a/gamecorev0.0.8/gamecorev0.0.8/gamecorev0.0.8.vcproj
+++ b/gamecorev0.0.8/gamecorev0.0.8/gamecorev0.0.8.vcproj
@@ -173,6 +173,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\Config_Reader.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\consoleevent.cpp"
 				>
 			</File>
@@ -218,6 +222,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\Config_Reader.h"
+				>
+			</File>
 			<File
 				RelativePath=".\consoleevent.h"
 				>
