Added gameplay mechanics with clue class and added common.h for organization purposes.
Now you can right click on the the clue to load in the npc.

--- a/gamecorev0.1.0/gamecorev0.1.0/gamecorev0.1.0.vcproj
+++ b/gamecorev0.1.0/gamecorev0.1.0/gamecorev0.1.0.vcproj
@@ -197,6 +197,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\InteractiveObject.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\InternalServer.cpp"
 				>
 			</File>
@@ -240,6 +244,10 @@
 			</File>
 			<File
 				RelativePath=".\ClueObject.h"
+				>
+			</File>
+			<File
+				RelativePath=".\common.h"
 				>
 			</File>
 			<File
