+added grass scene node +added skybox +added player Hunger level +added player Water level
-updated player scale

--- a/gamecorev0.1.1/gamecorev0.1.1/gamecorev0.1.1.vcproj
+++ b/gamecorev0.1.1/gamecorev0.1.1/gamecorev0.1.1.vcproj
@@ -194,6 +194,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\GrassNode.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\GUI.cpp"
 				>
 			</File>
@@ -265,6 +269,10 @@
 			</File>
 			<File
 				RelativePath=".\exampleframework.h"
+				>
+			</File>
+			<File
+				RelativePath=".\GrassNode.h"
 				>
 			</File>
 			<File
